methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:65: error: Unmatched closing brace '}' ignored here
}
^