methods.picture.MethodsPicture.scala.code
override def run() {
  for(i<- 1 to 3){
    faireMotifPrep()
    faireMotifPrep()
    faireMotifL()
  }
}

def faireMotifPrep() {
  faireV(Color.YELLOW)
  faireV(Color.RED)
  faireV(Color.BLUE)
  faireV(Color.GREEN)
  
  for(o<-1 to 7){
    avance()
  }
}

def faireV(c:Color){
  setCouleurBrosse(c)
  avance()
  avance()
  baisseBrosse()
  leveBrosse()
  gauche()
  avance()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  gauche()
  avance()
  avance()
  gauche()
}

def faireMotifL(){
	faireV(Color.YELLOW)
  faireV(Color.RED)
  faireV(Color.BLUE)
  faireV(Color.GREEN)
  }
  gauche()
  for(o<-1 to 7){
    avance()
  }
  gauche()
  for(o<-1 to 14){
    avance()
  }
  gauche()
  gauche()
}


  
  